--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -247,7 +247,7 @@ nav ul li {
   width: 100%;
   padding: 10px;
   margin: 10px 0;
-  background-color: transparent;
+  background-color: #fff;
   border: 2px solid var(--secondary-color);
   border-radius: 5px;
   font-size: 1rem;
