--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -280,7 +280,7 @@ nav ul li {
 /* Scroll to top button */
 .scroll-up {
   position: fixed;
-  right: 0;
+  right: 0.5%;
   bottom: 3%;
   cursor: pointer;
 }
