--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,6 +55,10 @@ section {
 
 /* Navbar */
 nav {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
