--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -127,7 +127,7 @@ nav ul li {
 
 .bio p {
   line-height: var(--line-height);
-  padding: 0.3rem;
+  padding: 0.3rem 0;
 }
 /* Hero section ends */
 
