--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,8 @@
   --bg-color: #fcfcfc;
   --primary-color: #4756df;
   --secondary-color: #ff7235;
+  --primary-shadow: #8b8eaf;
+  --secondary-shadow: #a17a69;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
@@ -118,7 +120,7 @@ nav ul li {
   width: 25rem;
   padding: 0.625rem;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px 2px var(--primary-color);
+  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
 }
 
 .bio h1 {
@@ -226,13 +228,13 @@ nav ul li {
   margin: 0 auto;
   padding: 0.938rem;
   border-radius: 5px;
-  box-shadow: 0 3px 10px var(--secondary-color);
+  box-shadow: 0 3px 10px var(--secondary-shadow);
 }
 
 .contact-form-container label {
   line-height: 2.7em;
   font-weight: var(--bold-font);
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .contact-form-container textarea {
@@ -246,14 +248,14 @@ nav ul li {
   padding-bottom: 10px;
   border-radius: 5px;
   border: none;
-  border: 2px outset var(--secondary-color);
+  border: 2px outset var(--primary-color);
   font-size: 0.875rem;
   outline: none;
 }
 
 .input-field::placeholder {
   padding: 0.5rem;
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .submit-btn {
@@ -261,7 +263,7 @@ nav ul li {
   padding: 10px;
   margin: 10px 0;
   background-color: #fff;
-  border: 2px solid var(--secondary-color);
+  border: 2px solid var(--primary-color);
   border-radius: 5px;
   font-size: 1rem;
   font-weight: var(--bold-font);
@@ -269,7 +271,7 @@ nav ul li {
 }
 
 .submit-btn:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   border: 2px solid var(--primary-color);
   cursor: pointer;
 }
@@ -317,7 +319,7 @@ footer {
 .icon-card {
   background-color: #fff;
   border-radius: 11px;
-  box-shadow: 0 3px 10px var(--secondary-color);
+  box-shadow: 0 3px 10px var(--secondary-shadow);
   padding: 20px;
   margin: 10px;
 }
@@ -325,7 +327,7 @@ footer {
 .project-card {
   background-color: #fff;
   border-radius: 11px;
-  box-shadow: 0 3px 10px var(--primary-color);
+  box-shadow: 0 3px 10px var(--primary-shadow);
   padding: 20px;
   margin: 10px;
 }
@@ -338,7 +340,6 @@ footer {
   nav ul {
     position: fixed;
     background-color: var(--bg-color);
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     flex-direction: column;
     top: 86px;
     left: 10%;
